--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -52,21 +52,27 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
+          # Configure git
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
           
           # Save the current commit SHA
           CURRENT_COMMIT=$(git rev-parse HEAD)
           
+          # Clean untracked files and directories
+          git clean -fdx
+          
+          # Stash any changes
+          git stash --include-untracked
+          
           # Checkout gh-pages branch, creating it if it doesn't exist
           if git show-ref --verify --quiet refs/remotes/origin/gh-pages; then
             git checkout gh-pages
           else
             git checkout --orphan gh-pages
-            git rm -rf .
           fi
           
-          # Clean the working directory
+          # Remove everything but .git directory
           git rm -rf .
           
           # Copy the built site
