--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -56,14 +56,13 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
           
-          # Save the current commit SHA
+          # Save the current commit SHA and _site directory
           CURRENT_COMMIT=$(git rev-parse HEAD)
+          TEMP_DIR=$(mktemp -d)
+          cp -r _site/* "$TEMP_DIR/"
           
           # Clean untracked files and directories
           git clean -fdx
-          
-          # Stash any changes
-          git stash --include-untracked
           
           # Checkout gh-pages branch, creating it if it doesn't exist
           if git show-ref --verify --quiet refs/remotes/origin/gh-pages; then
@@ -75,8 +74,9 @@ jobs:
           # Remove everything but .git directory
           git rm -rf .
           
-          # Copy the built site
-          cp -r _site/* .
+          # Copy the built site from temp directory
+          cp -r "$TEMP_DIR"/* .
+          rm -rf "$TEMP_DIR"
           
           # Add .nojekyll file
           touch .nojekyll
