uncommitted changes to the plot files that would be overwritten when switching branches

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -61,6 +61,10 @@ jobs:
           TEMP_DIR=$(mktemp -d)
           cp -r _site/* "$TEMP_DIR/"
           
+          # Stash any changes including untracked files
+          git add -A
+          git stash push -u
+          
           # Clean untracked files and directories
           git clean -fdx
           
