--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -52,25 +52,35 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
+          # Configure git
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
           
-          # Save the current commit SHA
+          # Save the current commit SHA and _site directory
           CURRENT_COMMIT=$(git rev-parse HEAD)
+          TEMP_DIR=$(mktemp -d)
+          cp -r _site/* "$TEMP_DIR/"
+          
+          # Stash any changes including untracked files
+          git add -A
+          git stash push -u
+          
+          # Clean untracked files and directories
+          git clean -fdx
           
           # Checkout gh-pages branch, creating it if it doesn't exist
           if git show-ref --verify --quiet refs/remotes/origin/gh-pages; then
             git checkout gh-pages
           else
             git checkout --orphan gh-pages
-            git rm -rf .
           fi
           
-          # Clean the working directory
+          # Remove everything but .git directory
           git rm -rf .
           
-          # Copy the built site
-          cp -r _site/* .
+          # Copy the built site from temp directory
+          cp -r "$TEMP_DIR"/* .
+          rm -rf "$TEMP_DIR"
           
           # Add .nojekyll file
           touch .nojekyll
